# bettercd

./: .gitignore  README.md
bcd/: CMakeLists.txt  bcd.cpp
